# sw-kg

./: .gitignore  README.md
teams/pela/: README.md  README_trabajo_total.md  pyproject.toml  shacl.ttl
teams/pela/TAREA_1/: info_grupo.yml
teams/pela/TAREA_2/: README.md
teams/pela/TAREA_2/data/: historial de cambios openrefine.json  history.json
teams/pela/TAREA_3/: README.md
teams/pela/TAREA_3/ontology/: ontology.ttl
teams/pela/TAREA_3/ontology/documentation/: .htaccess  ontology.ttl.widoco.conf
teams/pela/TAREA_3/ontology/validation/: results.tsv  tests.txt
teams/pela/TAREA_4/: README.md  readme_4.md
teams/pela/TAREA_4/mappings/: config.ini  mapping.rml.ttl  mapping.yarrrml.yaml  yarrml_a_rml.py
teams/pela/TAREA_5/: README.md  readme_5.md
teams/pela/TAREA_5/shapes/: shapes_from_data.ttl  shapes_from_ontology.ttl
teams/pela/TAREA_5/shapes/validation/: generate_data_shapes.py  output_validate.md  report_data_shapes.ttl  report_model_shapes.ttl  validate.py  validate_data_and_ontology_shapes.py
teams/pela/TAREA_6/: exploracion_kg.ipynb
teams/pela/TAREA_6/data/processed/: fields.csv
teams/pela/TAREA_6/queries/: federated_query_1.rq  federated_query_2.rq  local_query_1.rq  local_query_2.rq
teams/pela/TAREA_6/results/query_results/: federated_query_1.csv  federated_query_2.csv  (+2 more)
teams/pela/TAREA_6/src/: app.py  llm_query_gen.py  preprocess.py  readme-6.md  run_queries.py
teams/pela/ontologia-deportes.openrefine/: metadata.json  metadata.old.json
teams/pela/ontologia-deportes.openrefine/data/: pool.txt
teams/pela/ontology/: README.md
(+361 files in other folders)
